Fix T52111: Buffer stroke obscured by buffer fill