source/blender/draw/engines/gpencil/gpencil_engine.c
@@ -188,14 +188,14 @@ static void GPENCIL_cache_init(void *vedata)
 		}
 
 		psl->drawing_pass = DRW_pass_create("Gpencil Drawing Pass", DRW_STATE_WRITE_COLOR | DRW_STATE_BLEND);
+		stl->g_data->shgrps_drawing_fill = DRW_gpencil_shgroup_drawing_fill_create(psl->drawing_pass, e_data.gpencil_drawing_fill_sh);
+
 		if (stl->storage->stroke_style != STROKE_STYLE_VOLUMETRIC) {
 			stl->g_data->shgrps_drawing_stroke = DRW_gpencil_shgroup_stroke_create(&e_data, vedata, psl->drawing_pass, e_data.gpencil_stroke_sh, NULL, NULL, palcolor, -1);
 		}
 		else {
 			stl->g_data->shgrps_drawing_stroke = DRW_gpencil_shgroup_point_create(&e_data, vedata, psl->drawing_pass, e_data.gpencil_point_sh, NULL, NULL, palcolor, -1);
 		}
-
-		stl->g_data->shgrps_drawing_fill = DRW_gpencil_shgroup_drawing_fill_create(psl->drawing_pass, e_data.gpencil_drawing_fill_sh);
 
 		/* we need a full screen pass to combine the result of zdepth */
 		struct Gwn_Batch *quad = DRW_cache_fullscreen_quad_get();
